# service/src/main/java/com/lopixlabs/app/fullstackdemo/auth/model/AuthResult.java
@@ -1,4 +1,4 @@
-package com.lopixlabs.app.fullstackdemo.login.model;
+package com.lopixlabs.app.fullstackdemo.auth.model;
 
 import lombok.AllArgsConstructor;
 import lombok.Value;
@@ -7,6 +7,7 @@ import lombok.extern.jackson.Jacksonized;
 @Value
 @AllArgsConstructor(staticName = "of")
 @Jacksonized
-public class LoginResult {
+public class AuthResult {
     String token;
+    String refreshToken;
 }
